# Homework-CMake-Nechibylo

./: .gitignore  REDME.md
my_first_cmake_project/: CMakeLists.txt  my_first_cmake_project.cpp  my_first_cmake_project.h
my_second_cmake_project/: CMakeLists.txt  my_second_cmake_project.cpp  my_second_cmake_project.h
my_second_cmake_project/functions/: PrintInfo.h
